--- a/Code/site/_data/layout.yml
+++ b/Code/site/_data/layout.yml
@@ -5,11 +5,9 @@ documentBackgroundImage: '/assets/images/tree_bark.png'
 headerBackgroundImage: '/assets/images/dark-metropolis-light.jpg'
 albumOfTheWeekImage: '/assets/backgrounds/KoanSoundSanctuary.jpg'
 
-#http://cdn.elegantthemes.com/preview/Vertex/wp-content/uploads/2013/06/header10.jpg'
-
-#'http://cdn.elegantthemes.com/preview/Vertex/wp-content/uploads/2013/06/header10.jpg'
-
 # Font URLs
 titleFont: '/assets/fonts/pincoyablack.otf'
 navigationFont: '/assets/fonts/loaded.ttf'
+folksFont: '/assets/fonts/Folks-Bold.ttf'
+dosisFont: '/assets/fonts/Dosis-Regular.otf'
 
